--- a/index.html
+++ b/index.html
@@ -11,70 +11,78 @@
 
 <body>
     <nav>
+        <div class="nav-item"><p id="layout-1-gallary">Underxcore</p></div>
+        <div class="nav-item"><p id="layout-1-gallary">01</p></div>
+        <div class="nav-item"><p id="layout-2-gallary">02</p></div>
+        <div class="nav-item"><p id="layout-3-gallary">03</p></div>
+        <div class="nav-item"><p id="layout-4-gallary">Menu</p></div>
+    </nav>
+    
+    <!-- <nav>
         <div class="nav-item">
             <p>Underxcore</p>
         </div>
-        <div class="nav-item">01</div>
-        <div class="nav-item">02</div>
-        <div class="nav-item">03</div>
-        <div class="nav-item">Menu</div>
-    </nav>
+        <div class="nav-item"><p>01</p></div>
+        <div class="nav-item"><p>02</p></div>
+        <div class="nav-item"><p>03</p></div>
+        <div class="nav-item"><p>04</p></div>
+    </nav> -->
 
     <div class="gallary-container">
         <div class="gallary layout-1-gallary">
-            <div class="img" id="1">
+            <div class="img" id="img1">
                 <img src="https://images.pexels.com/photos/17815963/pexels-photo-17815963/free-photo-of-blue-facade-of-residential-building.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="">
             </div>
-            <div class="img" id="2">
+            <div class="img" id="img2">
                 <img src="https://images.pexels.com/photos/11808216/pexels-photo-11808216.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
                     alt="">
             </div>
-            <div class="img" id="3">
+            <div class="img" id="img3">
                 <img src="https://images.pexels.com/photos/9738057/pexels-photo-9738057.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="">
             </div>
-            <div class="img" id="4">
+            <div class="img" id="img4">
                 <img src="https://images.pexels.com/photos/11378809/pexels-photo-11378809.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="">
             </div>
-            <div class="img" id="5">
+            <div class="img" id="img5">
                 <img src="https://images.pexels.com/photos/13855205/pexels-photo-13855205.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="">
             </div>
-            <div class="img" id="6">
+            <div class="img" id="img6">
                 <img src="https://images.pexels.com/photos/20582858/pexels-photo-20582858/free-photo-of-facade-of-a-store-in-a-city.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="">
             </div>
-            <div class="img" id="7">
+            <div class="img" id="img7">
                 <img src="https://images.pexels.com/photos/17815963/pexels-photo-17815963/free-photo-of-blue-facade-of-residential-building.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="">
             </div>
-            <div class="img" id="8">
+            <div class="img" id="img8">
                 <img src="https://images.pexels.com/photos/5069374/pexels-photo-5069374.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                     alt="">
             </div>
-            <div class="img" id="9">
+            <div class="img" id="img9">
                 <img src="https://images.pexels.com/photos/17463573/pexels-photo-17463573/free-photo-of-red-entrance-door.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
                     alt="">
             </div>
-            <div class="img" id="10">
+            <div class="img" id="img10">
                 <img src="https://images.pexels.com/photos/17384865/pexels-photo-17384865/free-photo-of-apartment-building-with-balcony-in-dubai-uae.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
                     alt="">
             </div>
-            <div class="img" id="11">
+            <div class="img" id="img11">
                 <img src="https://images.pexels.com/photos/17628108/pexels-photo-17628108/free-photo-of-residential-building-in-a-city.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
                     alt="">
             </div>
-            <div class="img" id="12">
+            <div class="img" id="img12">
                 <img src="https://images.pexels.com/photos/17894624/pexels-photo-17894624/free-photo-of-yellow-entrance-door-of-a-residential-building.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
                     alt="">
             </div>
-            <div class="img" id="13">
+            <div class="img" id="img13">
                 <img src="https://images.pexels.com/photos/15953795/pexels-photo-15953795/free-photo-of-facade-of-a-residential-building-with-wooden-door-and-a-balcony.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
                     alt="">
             </div>
-            <div class="img" id="14">
+            <div class="img" id="img14">
                 <img src="https://images.pexels.com/photos/17649365/pexels-photo-17649365/free-photo-of-bars-on-window-on-sunlit-wall.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
                     alt="">
             </div>
@@ -83,7 +91,39 @@
         </div>
     </div>
 
-    <div class="minimap"></div>
+    <div class="minimap">
+        <div class="img-previews">
+            <img src="https://images.pexels.com/photos/17815963/pexels-photo-17815963/free-photo-of-blue-facade-of-residential-building.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="">
+            <img src="https://images.pexels.com/photos/11808216/pexels-photo-11808216.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                alt="">
+            <img src="https://images.pexels.com/photos/9738057/pexels-photo-9738057.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="">
+            <img src="https://images.pexels.com/photos/11378809/pexels-photo-11378809.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="">
+            <img src="https://images.pexels.com/photos/13855205/pexels-photo-13855205.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="">
+            <img src="https://images.pexels.com/photos/20582858/pexels-photo-20582858/free-photo-of-facade-of-a-store-in-a-city.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="">
+            <img src="https://images.pexels.com/photos/17815963/pexels-photo-17815963/free-photo-of-blue-facade-of-residential-building.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="">
+            <img src="https://images.pexels.com/photos/5069374/pexels-photo-5069374.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="">
+            <img src="https://images.pexels.com/photos/17463573/pexels-photo-17463573/free-photo-of-red-entrance-door.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                alt="">
+            <img src="https://images.pexels.com/photos/17384865/pexels-photo-17384865/free-photo-of-apartment-building-with-balcony-in-dubai-uae.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                alt="">
+            <img src="https://images.pexels.com/photos/17628108/pexels-photo-17628108/free-photo-of-residential-building-in-a-city.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                alt="">
+            <img src="https://images.pexels.com/photos/17894624/pexels-photo-17894624/free-photo-of-yellow-entrance-door-of-a-residential-building.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                alt="">
+            <img src="https://images.pexels.com/photos/15953795/pexels-photo-15953795/free-photo-of-facade-of-a-residential-building-with-wooden-door-and-a-balcony.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                alt="">
+            <img src="https://images.pexels.com/photos/17649365/pexels-photo-17649365/free-photo-of-bars-on-window-on-sunlit-wall.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                alt="">
+
+        </div>
+    </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
